feat(12-02): enumerate every legal shift window, pin rounding parity
- ShiftWindowFinder.findWindows widened from earliest-only to full
  enumeration: every legal span start x break offset combination is
  returned, ordered by span start then break offset ascending, so the
  order is stable across repeated calls (12-03's benchmark harness
  depends on this).
- Duplicate seats sharing a timeslot start time are deduplicated by
  lowest Timeslot.getId(), deterministically, rather than first-seen.
- ShiftWindowFinderTest added as a pure-function suite (no solver
  bootstrap): rounding-mode parity (HALF_UP vs CEILING), the 28-window
  reference fixture, leading/trailing blocked-margin refusal,
  alignment strictness, a contiguity hole, duplicate-seat dedup,
  the no-break case, insufficient-seats, and call-to-call determinism.
- Rule 1 fix: AssignSeatMove.getPlanningValues() used List.of(toAgent),
  which throws NullPointerException for a null (unassign) target —
  latent since 12-01 because only assign moves existed until now.
  Switched to Collections.singletonList, which tolerates null.